# coding-interview

./: README.md  pyproject.toml  requirements.txt
app/: Dockerfile  app.py
tests/: test_palindrome.py
